syntax = "proto3";

package zksync.config.circuit_breaker;

message CircuitBreaker {
  optional uint64 sync_interval_ms = 1; // required; ms
  optional uint64 http_req_max_retry_number = 2; // required
  optional uint32 http_req_retry_interval_sec = 3; // required; s
  optional uint32 replication_lag_limit_sec = 4; // optional; s
}


